# t212-cli

./: .envrc  .gitignore  .pre-commit-config.yaml  .python-version  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  api.md  api.yaml  pyproject.toml  test_vorabpauschale.py
.agents/skills/t212/: SKILL.md
.agents/skills/t212/assets/: api.yaml
.agents/skills/t212/references/: api.md  german-capital-investment-taxation.md
.agents/skills/t212/scripts/t212_cli/: __main__.py
.agents/skills/t212/scripts/t212_cli/cli/: main.py  tax.py
.agents/skills/t212/scripts/t212_cli/client/: base.py
.agents/skills/t212/scripts/t212_cli/models/: __init__.py
.agents/skills/t212/scripts/t212_cli/tax/: calculator.py  charts.py  config.py  history.py  justetf.py  market_data.py  models.py  pie_analysis.py  yahoo_finance.py  yahoo_symbols.py
.agents/skills/t212/tests/test_cli/: test_calculator.py  test_cli_main.py  test_etf.py  test_main.py  test_tax.py
.agents/skills/t212/tests/test_client/: test_base.py
.agents/skills/t212/tests/test_tax/: __init__.py  test_calculator.py  test_justetf.py  test_market_data.py  test_pie_analysis.py  test_scraper.py  test_yahoo_finance.py
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/t212_cli/cli/: main.py  tax.py
src/t212_cli/client/: base.py
src/t212_cli/models/: __init__.py
src/t212_cli/tax/: __init__.py  calculator.py  config.py  market_data.py  scraper.py
tests/: test_client_config.py
tests/test_cli/: test_calculator.py  test_cli_main.py  test_main.py
tests/test_client/: test_base.py
tests/test_tax/: test_calculator.py  test_config.py
