[project]
name = "t212-cli"
version = "0.1.0"
description = "A Python client and CLI for the Trading 212 API"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Trading 212 CLI Contributors", email = "noreply@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0"
]

[project.scripts]
t212 = "t212_cli.__main__:app"

[build-system]
requires = ["hatchling"] # Using standard hatchling for build, but user mentioned uv_build. Assuming standard uv default.
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "python-semantic-release>=8.0.0",
    "types-requests",
    "bandit>=1.9.4",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install uv && uv build"
upload_to_vcs_release = true
