[project]
name = "t212-cli"
version = "0.2.0"
description = "A Python client and CLI for the Trading 212 API"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Trading 212 CLI Contributors", email = "noreply@example.com" }
]
dependencies = [
    "typer==0.24.1",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "rich==14.3.3",
    "pyyaml>=6.0.3",
    "yfinance>=1.2.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "curl-cffi>=0.13.0",
    "types-pyyaml>=6.0.12.20250915",
]

[project.scripts]
t212 = "t212_cli.__main__:app"

[build-system]
requires = ["hatchling"] # Using standard hatchling for build, but user mentioned uv_build. Assuming standard uv default.
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "ruff==0.15.4",
    "mypy==1.19.1",
    "python-semantic-release==9.21.1",
    "types-requests==2.32.4.20260107",
    "bandit==1.9.4",
    "pytest-cov==7.0.0",
    "pre-commit==4.5.1",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install uv && uv build"
upload_to_vcs_release = true
