[project]
name = "t212-cli"
version = "1.4.1"
description = "A Python client and CLI for the Trading 212 API"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Trading 212 CLI Contributors", email = "noreply@example.com" }
]
dependencies = [
    "typer==0.27.0",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "rich==14.3.4",
    "pyyaml>=6.0.3",
    "yfinance>=1.2.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "curl-cffi>=0.13.0",
    "types-pyyaml>=6.0.12.20250915",
]

[project.scripts]
t212 = "t212_cli.__main__:app"






[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".agents/skills/t212/scripts/t212_cli"]


[tool.pytest.ini_options]
testpaths = [".agents/skills/t212/tests"]


[tool.ruff]
line-length = 88
target-version = "py314"

[tool.mypy]
strict = true
python_version = "3.14"
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install uv && uv build"
upload_to_vcs_release = true





[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "ruff==0.15.22",
    "mypy==1.20.2",
    "python-semantic-release==9.21.2",
    "types-requests==2.33.0.20260712",
    "bandit==1.9.4",
    "pytest-cov==7.1.0",
    "pre-commit==4.6.1",
    "datamodel-code-generator>=0.69.0",
]
